--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,27 @@
 # Ignore directories
-.ipynb_checkpoints*
-__pycache__*
-input*
-output*
-Archive*
+.ipynb_checkpoints/
+__pycache__/
+input/
+output/
+Archive/
+archive/
+processed/
+testing/
+shapefiles/
 
 # File types
 *.csv
+*.geojson
+*.json
+*.zip 
+*.tar.gz
+
+# Include files from excluded patterns
+!ODBizSources.csv
+!variablemap.csv
 
 # Specific Files
 TODO.md
 3-Merging/postMergedDataViewing.ipynb
 3-Merging/mergingTest.ipynb
+2-OpenTabulate/mapping_summary.txt
