--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ shapefiles/
 !1-PreProcessing/raw/shapefiles/**/**.csv
 
 # Specific Files
+test.txt
 TODO.md
 3-Merging/postMergedDataViewing.ipynb
 3-Merging/mergingTest.ipynb
