Ignore test files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ TODO.md
 3-Merging/mergingTest.ipynb
 2-OpenTabulate/mapping_summary.txt
 1-PreProcessing/raw/BC_Vancouver_Business_Licences.csv
+test.py
